--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,6 +43,6 @@
   </filter>
   <filter-mapping>
     <filter-name>LoginChecker</filter-name>
-    <url-pattern>/showMessage.jsp</url-pattern>
+    <url-pattern>/*</url-pattern>
   </filter-mapping>
 </web-app>
